refine doc